Add mention about --enable-native-access